fixed the classes issue on the logos
fixed a small logo issue and added a new number

--- a/index.html
+++ b/index.html
@@ -291,12 +291,12 @@
     </section>
     <footer>
       <div class="container">
-        <div class="logo">
+        <div class="footerlogo">
           <div class="image">Logo Here</div>
           <div class="tagline">
             <p>Unleash Your Online Potential with 12G Inc</p>
           </div>
-          <div class="phone">+260978386755</div>
+          <div class="phone">+260978386755 | +260974302403</div>
         </div>
         <div class="menuList">
           <h3>Site Navigation</h3>
