added media queries
added media queries

--- a/index.html
+++ b/index.html
@@ -244,10 +244,7 @@
     </section>
     <section class="contact">
       <h1>Contact Us</h1>
-      <p>
-        From as little as K500, we can make you a website and enhance your
-        online presence for your business.
-      </p>
+      <p>From as little as K500, we can enhance your online presence.</p>
       <div class="form-container">
         <form class="form">
           <div class="form-group">
