--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a onclick="scrollToSection('process')">Process</a></li>
           <li><a onclick="scrollToSection('pricing')">Pricing</a></li>
         </ul>
-        <a href="#" class="action_btn">Get Started</a>
+        <a onclick="scrollToSection('contact')" class="action_btn">Connect</a>
         <div class="toggle_btn">
           <i class="fa-solid fa-bars"></i>
         </div>
