fixed connect button
button was not visible

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
           <li><a onclick="scrollToSection('process')">Process</a></li>
           <li><a onclick="scrollToSection('pricing')">Pricing</a></li>
           <li>
-            <a onclick="scrollToSection('contact')" class="action_btn"
-              >Connect</a
-            >
+            <a onclick="scrollToSection('contact')">Connect</a>
           </li>
         </div>
       </div>
