--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       crossorigin="anonymous"
     ></script>
     <link type="text/css" rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+Makasar&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -19,7 +25,7 @@
     <header>
       <div class="navbar">
         <div class="logo">
-          <a href="#">Logo will come here</a>
+          <a href="#">12gInc</a>
         </div>
         <ul class="links">
           <li><a onclick="scrollToSection('home')">Home</a></li>
@@ -292,7 +298,9 @@
     <footer>
       <div class="container">
         <div class="footerlogo">
-          <div class="image">Logo Here</div>
+          <div class="Flogo">
+            <a onclick="scrollToSection('home')">12gInc</a>
+          </div>
           <div class="tagline">
             <p>Unleash Your Online Potential with 12G Inc</p>
           </div>
