--- a/index.html
+++ b/index.html
@@ -319,18 +319,39 @@
           <h3>Contact</h3>
           <ul>
             <li>
-              <a href="facebook.com/lmashaya"
+              <a
+                href="facebook.com/lmashaya"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook contact link"
                 ><i class="fa-brands fa-facebook fa-beat-fade"></i
               ></a>
             </li>
             <li>
-              <a href="twitter.com/lmash12"
+              <a
+                href="twitter.com/lmash12"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Twitter contact link"
                 ><i class="fa-brands fa-twitter fa-beat-fade"></i
               ></a>
             </li>
             <li>
-              <a href="instagram.com/lesley.t.m"
+              <a
+                href="instagram.com/lesley.t.m"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Instagram contact link"
                 ><i class="fa-brands fa-instagram fa-beat-fade"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://wa.me/+260978386755?text=Hello"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Whatsapp contact link"
+                ><i class="fa-brands fa-whatsapp fa-beat-fade"></i
               ></a>
             </li>
           </ul>
